chaing whole website layout and design

--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -3,16 +3,17 @@
   align-items: center;
   justify-content: center;
   .codeSnippet_container {
+    border: 1px solid #132f4c;
     margin: 16px 0px;
     height: 100%;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 12px;
     max-height: 550px;
     overflow-y: scroll;
     scroll-behavior: smooth;
     -ms-overflow-style: none; /* IE 11 */
     scrollbar-width: none; /* Firefox 64 */
-   ::-webkit-scrollbar {
+    ::-webkit-scrollbar {
       display: none;
     }
     ::-webkit-scrollbar-thumb {
