--- a/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
+++ b/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
@@ -1,90 +1,178 @@
-.featuredQuestions {
+.topics {
   width: 100%;
+  background-color: #0b1929;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 32px;
-  background: #ffffff;
-  .featuredQuestions_grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    row-gap: 32px;
-    column-gap: 32px;
-    .featuredQuestions_grid_item {
-      border-radius: 4px;
-      padding: 24px;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-      transition: all 0.2s ease-in-out;
-      &:hover {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        transform: scale(1.004);
-      }
-      height: 310px;
-      width: 100%;
+  padding: 72px 0px;
+  .topics_grid {
+    width: var(--max-width);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    .topics_title {
+      margin-bottom: 8px;
+      font-size: 20px;
+      font-weight: 600;
+      color: #66b2ff;
+      font-family: "Roboto", sans-serif;
+    }
+    .topics_grid_item {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-      justify-content: center;
-      .featuredQuestions_grid_item_title {
-        font-size: 42px;
-        font-weight: 800;
-        color: #000;
-        font-family: "Roboto", sans-serif;
-      }
-      .featuredQuestions_grid_item_description {
-        font-size: 22px;
-        font-weight: 400;
-        color: #666;
-        font-family: "Inter", sans-serif;
-        text-align: center;
-      }
-      .featuredQuestions_grid_item_button {
-        margin-top: 0px;
-        padding: 16px 42px;
-        border-radius: 4px;
-        font-size: 15px;
-        font-weight: 500;
-        background: #202123;
-        color: #fff;
-        cursor: pointer;
-        font-family: "Inter", sans-serif;
-        transition: all 0.2s ease-in-out;
-        &:hover {
-          background: #1a1a1d;
+      gap: 52px;
+      .topics_grid_item_left {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        .topics_grid_item_title {
+          font-size: 24px;
+          font-weight: 600;
+          color: #fff;
+          font-family: "Roboto", sans-serif;
+          line-height: 1.2;
+        }
+        .topics_grid_item_description {
+          font-size: 14px;
+          font-weight: 400;
+          color: #a0aab4;
+          line-height: 1.2;
+          margin-top: 10px;
+        }
+        .topics_grid_item_lists {
+          margin-top: 32px;
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+          .topics_grid_item_list {
+            width: 100%;
+            display: flex;
+            gap: 24px;
+            align-items: center;
+            padding: 24px;
+            border-radius: 12px;
+            transition: all 0.1s ease-in-out;
+            cursor: pointer;
+            &:hover {
+              background: #011e3c;
+            }
+            .topics_grid_item_list_right {
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+              .topics_grid_item_list_title {
+                font-size: 16px;
+                font-weight: 600;
+                color: #fff;
+                font-family: "Roboto", sans-serif;
+              }
+              .topics_grid_item_list_description {
+                font-size: 14px;
+                font-weight: 400;
+                color: #a0aab4;
+              }
+              .topics_grid_item_list_link {
+                font-family: "Roboto", sans-serif;
+                font-size: 14px;
+                width: max-content;
+                font-weight: 600;
+                color: #66b2ff;
+              }
+            }
+          }
+          .selectedItem {
+            background: #132f4c;
+            border: 1px solid #5090d3;
+          }
         }
       }
-    }
-    .featuredQuestions_grid_item_1 {
-      grid-column: 1 / 2;
-      grid-row: 1 / 3;
-      height: 650px;
-      gap: 32px;
-      .featuredQuestions_grid_item_button {
-        margin-top: 32px;
-      }
-    }
-    .featuredQuestions_grid_item_5 {
-      grid-column: 1 span;
-      grid-row: 3 span;
-      height: 650px;
-      gap: 32px;
-      .featuredQuestions_grid_item_button {
-        margin-top: 32px;
+      .topics_grid_item_right {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        overflow: hidden;
+        padding: 24px 16px;
+        border-radius: 12px;
+        background: #132f4c;
+        border: 1px solid #5090d3;
+        gap: 52px;
+        height: max-content;
+        .topics_grid_item_right_item {
+          display: flex;
+          flex-direction: column;
+          .topics_grid_item_right_item_title {
+            font-size: 16px;
+            font-weight: 600;
+            color: #fff;
+            font-family: "Roboto", sans-serif;
+            background-color: #0059b2;
+            border: 1px solid #007fff;
+            width: max-content;
+            // make line break if text is too long
+            white-space: nowrap;
+
+            padding: 4px 16px;
+            border-radius: 16px;
+          }
+          .topics_grid_item_right_item_line {
+            width: 3px;
+            height: 24px;
+            background-color: #5090d3;
+            margin: 0px 16px;
+          }
+          .topics_grid_item_right_item_answer {
+            font-size: 16px;
+            font-weight: 400;
+            color: #a0aab4;
+            padding: 12px 16px;
+            border-radius: 16px;
+            background-color: #0b1929;
+            border: 1px solid #5090d3;
+          }
+        }
+        .topics_grid_item_right_link {
+          font-family: "Roboto", sans-serif;
+          font-size: 14px;
+          font-weight: 600;
+          text-align: center;
+          color: #66b2ff;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
       }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
-  .featuredQuestions {
-    padding: 0px 16px;
-    max-width: 500px;
-    .featuredQuestions_grid {
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: repeat(1, 1fr);
+  .topics {
+    padding: 72px 16px;
+    .topics_grid {
+      width: 100%;
+      .topics_grid_item {
+        flex-direction: column;
+        .topics_grid_item_left {
+          .topics_grid_item_lists {
+            .topics_grid_item_list {
+              cursor: pointer;
+              touch-action: pan-y;
+              -webkit-tap-highlight-color: transparent;
+            }
+          }
+        }
+        .topics_grid_item_right {
+          .topics_grid_item_right_item {
+            .topics_grid_item_right_item_title {
+              width: 100%;
+              white-space: normal;
+            }
+          }
+          .topics_grid_item_right_link {
+            touch-action: pan-y;
+            -webkit-tap-highlight-color: transparent;
+          }
+        }
+      }
     }
   }
 }
