--- a/components/languageQuestions/LanguageQuestions.module.scss
+++ b/components/languageQuestions/LanguageQuestions.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  background-color: #0b1929; 
   .language__container {
     max-width: 800px;
     width: 100%;
@@ -28,7 +29,6 @@
       display: flex;
       flex-direction: column;
       gap: 52px;
-      background: #ffffff;
       margin-top: 16px;
       .language__container__questions {
         display: flex;
@@ -37,13 +37,18 @@
         .language__container__questions__question {
           font-size: 22px;
           font-weight: 600;
-          color: #000;
           font-family: "Roboto";
+          font-family: "Roboto";
+          font-size: 18px;
+          font-weight: 600;
+          color: #e7ebf0;
         }
         .language__container__questions__answer {
-          line-height: 1.65;
           font-size: 15px;
+          line-height: 1.5;
           font-weight: 400;
+          color: #b2bac2;
+          letter-spacing: 0;
           direction: ltr;
           font-feature-settings: "kern";
           font-family: "Inter", sans-serif;
