--- a/common/drawLine/DrawLine.module.scss
+++ b/common/drawLine/DrawLine.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   .line {
-    width: 1px;
+    width: 2px;
     height: 100px;
   }
   .circle {
@@ -15,17 +15,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 32px;
-    height: 32px;
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
   }
   .title {
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 600;
     font-family: "Roboto", sans-serif;
     color: #000;
-    margin: 16px 0px;
+    margin-top: 16px;
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent !important;
+  }
+  .description {
+    margin-top: 24px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 32px;
   }
 }
