--- a/common/listShow/ListShow.module.scss
+++ b/common/listShow/ListShow.module.scss
@@ -12,7 +12,7 @@
       gap: 6px;
       .listShow_item {
         margin-left: 24px;
-        color: #000;
+        color: #0a7ea3;
       }
     }
   }
