--- a/common/makeDifferentiate/MakeDifferentiate.module.scss
+++ b/common/makeDifferentiate/MakeDifferentiate.module.scss
@@ -11,20 +11,20 @@
       width: 100%;
       min-width: 500px;
       border-collapse: collapse;
-      border: 1px solid rgb(121, 119, 119);
+      border: 1px solid #132F4C;
       border-radius: 5px;
       th,
       td {
         padding: 10px;
         text-align: left;
-        border-right: 1px solid rgb(142, 141, 141);
-        border-bottom: 1px solid rgb(143, 141, 141);
+        border-right: 1px solid #132F4C;
+        border-bottom: 1px solid #132F4C;
         color: #000;
       }
       .differentiate_header {
         font-weight: 600px;
         font-size: 18px;
-        color: #343541;
+        color: #dfdcdc;
         font-family: "Roboto", sans-serif;
         text-align: center;
       }
@@ -35,6 +35,11 @@
         direction: ltr;
         font-feature-settings: "kern";
         font-family: "Inter", sans-serif;
+        font-size: 1rem;
+        line-height: 1.5625;
+        font-weight: 400;
+        color: #a0aab4;
+        letter-spacing: 0;
       }
     }
   }
