--- a/common/questionDisplay/QuestionDisplay.module.scss
+++ b/common/questionDisplay/QuestionDisplay.module.scss
@@ -5,39 +5,38 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #0b1929;
   .questionDisplay_container {
     width: 100%;
     height: 100%;
     display: flex;
     gap: 52px;
     flex-direction: column;
-    background: #ffffff;
-    .questionDisplay_container_title {
-      font-size: 15px;
-      font-weight: 400;
-      line-height: 1.65;
-      color: #666;
-      background: #fafafa;
-      border: 1px solid#eaeaea;
-      padding: 16px;
-      font-family: "Inter", sans-serif;
-      border-radius: 4px;
-    }
+    background: #0b1929;
     .questionDisplay_question {
       display: flex;
       flex-direction: column;
+      padding: 24px;
+      border-radius: 12px;
+      background-color: #0b1929;
+      border: 1px solid #132F4C;
       gap: 12px;
       .questionDisplay_question_title {
         font-size: 22px;
         font-weight: 600;
+        letter-spacing: 0.1;
         color: #000;
         font-family: "Roboto";
+        font-size: 18px;
+        font-weight: 600;
+        color: #e7ebf0;
       }
       .questionDisplay_question_answer {
-        line-height: 1.65;
         font-size: 15px;
+        line-height: 1.5;
         font-weight: 400;
+        color: #b2bac2;
+        letter-spacing: 0;
         direction: ltr;
         font-feature-settings: "kern";
         font-family: "Inter", sans-serif;
