--- a/common/topicsList/TopicsList.module.scss
+++ b/common/topicsList/TopicsList.module.scss
@@ -9,18 +9,18 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 16px;
+      gap: 6px;
       .topicsList_header {
         font-size: 36px;
         font-weight: 700;
-        color: #000;
-        font-family: "Inter", sans-serif;
+        color: #ffffff;
+        font-family: "Roboto", sans-serif;
         letter-spacing: -1px;
       }
       .topicsList_sub_header {
         font-size: 16px;
         font-weight: 400;
-        color: #696969;
+        color: #b1bac2;
         font-family: "Inter", sans-serif;
       }
     }
@@ -32,12 +32,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
+  background: #0b1929;
   position: sticky;
   position: -webkit-sticky; /* Safari */
   z-index: 5;
-  top: 80px;
-  border-bottom: 1px solid #eaeaea;
+  top: 70px;
+  border: 1px solid #132f4c;
   width: 100%;
   gap: 16px;
   overflow-x: scroll;
@@ -50,7 +50,7 @@
     width: 0px;
   }
   .topicsList_item {
-    color: #000;
+    color: #dfdcdc;
     font-size: 14px;
     padding: 8px 16px;
     font-weight: 500;
