--- a/components/advanceFrontend/AdvanceFrontEnd.module.scss
+++ b/components/advanceFrontend/AdvanceFrontEnd.module.scss
@@ -19,7 +19,7 @@
       font-size: 46px;
       font-weight: 700;
       line-height: 1.5;
-      color: #333;
+      color: #fff;
       @media screen and (max-width: 800px) {
         font-size: 36px;
       }
@@ -30,7 +30,7 @@
       font-size: 20px;
       font-weight: 400;
       line-height: 1.5;
-      color: #333;
+      color: #b2bac2;
     }
   }
   .content {
