--- a/components/advanceFrontend/advanceHeader/AdvanceHeader.module.scss
+++ b/components/advanceFrontend/advanceHeader/AdvanceHeader.module.scss
@@ -4,8 +4,9 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 12px;
+  background-color: #0b1929;
+  border: 1px solid #132f4c;
   padding: 0px 16px;
   .adv_sidebar_left {
     height: 100%;
@@ -57,7 +58,7 @@
         font-size: 16px;
         font-weight: 400;
         font-family: "Roboto";
-        color: #000;
+        color: #fff;
       }
     }
   }
