--- a/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
+++ b/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
@@ -1,193 +1,75 @@
 .advancedFeature {
-  margin: 320px auto;
-  margin-top: 100px;
+  margin: 62px auto;
+  margin-bottom: 82px;
   width: 100%;
-  max-width: var(--maxWidth);
-  .design {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .line {
-      width: 1px;
-      height: 100px;
-      background: linear-gradient(180deg, #f9d004, #ff4e50);
-    }
-    .circle {
-      font-size: 16px;
-      font-weight: 600;
-      font-family: "Roboto", sans-serif;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      background: linear-gradient(-90deg, #ff4e50, #f9d004);
-    }
-    .title {
+  max-width: var(--max-width);
+  .advancedFeature_header {
+    .advancedFeature_header__text {
+      margin-bottom: 8px;
       font-size: 20px;
       font-weight: 600;
-      font-family: "Roboto", sans-serif;
-      color: #000;
-      margin: 16px 0px;
-      background: linear-gradient(90deg, #f9d423 0%, #ff4e50 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-  }
-  .advancedFeature_header {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: 72px;
-    .advancedFeature_header__text {
-      font-size: 28px;
-      font-weight: 500;
-      color: #000;
-      text-align: center;
+      color: #66b2ff;
       font-family: "Roboto", sans-serif;
     }
     .advancedFeature_header__sub_text {
-      font-size: 16px;
-      font-weight: 400;
-      color: #5f6368;
-      font-family: "Inter", sans-serif;
-      text-align: center;
-      padding: 0px 50px;
+      font-size: 24px;
+      font-weight: 600;
+      color: #fff;
+      font-family: "Roboto", sans-serif;
+      line-height: 1.2;
     }
-    .advancedFeature_header__button {
-      margin: 0 auto;
-      width: 340px;
-      margin-top: 32px;
-      height: 50px;
-      border-radius: 4px;
-      background-color: #25c93f;
-      color: white;
-      font-size: 16px;
-      font-weight: 500;
-      font-family: "Inter", sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: none;
-      cursor: pointer;
-      transition: all 0.2s ease-in-out;
-      &:hover {
-        background-color: #1daa31;
-      }
+    .advancedFeature_header__description {
+      font-size: 14px;
+      font-weight: 400;
+      color: #a0aab4;
+      line-height: 1.2;
+      margin-top: 10px;
     }
   }
   .advancedFeature_body {
-    width: 600px;
-    border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    transition: all 0.2s ease-in-out;
-    &:hover {
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-      transform: scale(1.004);
-    }
-    .advancedFeature_body__code_snippet_header {
-      position: relative;
-      border-radius: 4px;
-      height: max-content;
-      .advancedFeature_body__code_snippet_header__top {
-        position: absolute;
-        padding: 0px 16px;
-        border: 1px solid #eaeaea;
-        top: -24px;
-        left: 0px;
-        background-color: white;
-        height: 42px;
-        border-top-right-radius: 4px;
-        border-top-left-radius: 4px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        .advancedFeature_body__code_snippet_header__top__red {
-          width: 12px;
-          height: 12px;
-          border-radius: 50%;
-          background-color: #ff5f55;
-          margin-right: 8px;
-        }
-        .advancedFeature_body__code_snippet_header__top__yellow {
-          width: 12px;
-          height: 12px;
-          border-radius: 50%;
-          background-color: #ffbd2d;
-          margin-right: 8px;
-        }
-        .advancedFeature_body__code_snippet_header__top__green {
-          width: 12px;
-          height: 12px;
-          border-radius: 50%;
-          background-color: #25c93f;
-          margin-right: 8px;
-        }
-        .advancedFeature_body__code_snippet_header__top__text {
-          font-size: 14px;
-          margin-left: 24px;
-          font-weight: 500;
-          color: #5f6368;
-          font-family: "Roboto", sans-serif;
-          padding: 12px 24px;
-          border: 1px solid #d0cdcd;
-        }
+    margin-top: 62px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    .advancedFeature_body__item {
+      padding: 24px;
+      width: 328px;
+      height: 200px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      border-radius: 16px;
+      background: linear-gradient(to right bottom, #007fff, #0059b2 120%);
+      box-shadow: rgb(0 0 0 / 10%) 0px 20px 25px, rgb(0 0 0 / 4%) 0px 10px 10px;
+      .advancedFeature_body__item__header {
+        font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        color: #fff;
+        line-height: 1.2;
+        margin-bottom: 6px;
       }
-      .advancedFeature_body__output {
-        position: absolute;
-        top: 220px;
-        left: 400px;
-        background-color: white;
-        border: 1px solid #eaeaea;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-        border-radius: 4px;
+      .advancedFeature_body__item__description {
+        font-size: 14px;
+        font-weight: 400;
+        color: #a0aab4;
+        line-height: 1.2;
+      }
+      .advancedFeature_body__item__tags {
         display: flex;
-        flex-direction: column;
-        .advancedFeature_body__output_header {
-          padding: 0px 16px;
-          border: 1px solid #eaeaea;
-          background-color: white;
-          height: 42px;
-          border-top-right-radius: 4px;
-          border-top-left-radius: 4px;
-          display: flex;
-          align-items: center;
-          width: 100%;
-          .advancedFeature_body__code_snippet_header__top__red {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: #ff5f55;
-            margin-right: 8px;
-          }
-          .advancedFeature_body__code_snippet_header__top__yellow {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: #ffbd2d;
-            margin-right: 8px;
-          }
-          .advancedFeature_body__code_snippet_header__top__green {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background-color: #25c93f;
-            margin-right: 8px;
-          }
-          .advancedFeature_body__code_snippet_header__output_text {
-            font-size: 14px;
-            margin-left: 120px;
-            font-weight: 500;
-            color: #5f6368;
-            font-family: "Roboto", sans-serif;
-            padding: 4px 42px;
-            border-radius: 8px;
-            border: 1px solid #d0cdcd;
-          }
+        flex: 1;
+        align-items: flex-end;
+        flex-wrap: wrap;
+        gap: 8px;
+        .advancedFeature_body__item__tags__item {
+          font-size: 14px;
+          font-weight: 400;
+          color: #a0aab4;
+          line-height: 1.2;
+          margin-right: 8px;
+          padding: 6px 12px;
+          border-radius: 6px;
+          background: #132f4c;
         }
       }
     }
@@ -196,22 +78,14 @@
 
 @media screen and (max-width: 800px) {
   .advancedFeature {
+    padding: 0px 16px;
+    max-width: 100%;
     .advancedFeature_body {
-      padding: 0px 16px;
-      width: 100%;
-      .advancedFeature_body__code_snippet_header {
-        .advancedFeature_body__output {
-          top: 250px;
-          left: 0px;
-          .advancedFeature_body__output_img {
-            width: 100% !important;
-          }
-          .advancedFeature_body__output_header {
-            .advancedFeature_body__code_snippet_header__output_text {
-              margin-left: 20px;
-            }
-          }
-        }
+      justify-content: center;
+      .advancedFeature_body__item {
+        touch-action: pan-y;
+        -webkit-tap-highlight-color: transparent;
+        cursor: pointer;
       }
     }
   }
