--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -1,77 +1,99 @@
 .machineCodingList__container {
-  .machineCodingList__container__header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: 32px;
-    .machineCodingList__container__header__title {
-      font-size: 32px;
+  padding: 72px 0px;
+  max-width: var(--max-width);
+  margin: 0px auto;
+  .machineCodingList__container__text {
+    .machineCodingList__container__text__title {
+      margin-bottom: 8px;
+      font-size: 20px;
       font-weight: 600;
-      color: #000000;
+      color: #66b2ff;
       font-family: "Roboto", sans-serif;
     }
-    .machineCodingList__container__header__description {
-      font-size: 16px;
-      font-weight: 400;
-      color: #666;
-      font-family: "Inter", sans-serif;
-      text-align: center;
-      padding: 0px 120px;
+    .machineCodingList__container__text__description {
+      font-size: 24px;
+      font-weight: 600;
+      color: #fff;
+      font-family: "Roboto", sans-serif;
+      line-height: 1.2;
     }
-    .machineCodingList__container__header__btn {
-      width: 350px;
-      height: 50px;
-      margin: 32px 0px;
+    .machineCodingList__container__text__sub_heading {
+      font-size: 16px;
+      font-weight: 600;
+      color: #fff;
+      font-family: "Roboto", sans-serif;
+      line-height: 1.2;
+      margin-top: 42px;
+      margin-bottom: 12px;
+    }
+    .machineCodingList__container__text__list {
+      margin-top: 8px;
       display: flex;
       align-items: center;
-      justify-content: center;
-      background-color: rgba(214, 53, 53, 0.937);
-      border-radius: 4px;
-      color: #fff;
-      font-size: 15px;
-      font-weight: 600;
-      font-family: "Inter", sans-serif;
-      cursor: pointer;
-      transition: all 0.8s ease-in-out;
-      &:hover {
-        background-color: rgba(214, 53, 53, 0.8);
+      justify-content: space-between;
+      gap: 24px;
+      .machineCodingList__container__text__list__item {
+        flex: 1;
+        height: 160px;
+        padding: 16px;
+        border-radius: 12px;
+        background: #132f4c;
+        border: 1px solid #5090d3;
+        .machineCodingList__container__text__list__item__title {
+          font-size: 16px;
+          font-weight: 600;
+          color: #fff;
+          font-family: "Roboto", sans-serif;
+        }
+        .machineCodingList__container__text__list__item__description {
+          font-size: 14px;
+          font-weight: 400;
+          color: #a0aab4;
+          margin-top: 8px;
+        }
       }
     }
+  }
+  .machineCodingList__container__list_header {
+    margin-top: 62px;
+    margin-bottom: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
   }
   .machineCodingList__container__list {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 32px;
+    gap: 24px;
     .machineCodingList__container__list__item {
-      width: 480px;
+      width: 328px;
       height: auto;
-      background-color: #fff;
-      border-radius: 4px;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-      transition: all 0.2s ease-in-out;
-      &:hover {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        transform: scale(1.004);
-      }
+      padding: 24px;
+      border-radius: 12px;
+      background: linear-gradient(to right bottom, #007fff, #0059b2 120%);
+      box-shadow: rgb(0 0 0 / 10%) 0px 20px 25px, rgb(0 0 0 / 4%) 0px 10px 10px;
+      transition: all 0.5s ease-in-out;
       cursor: pointer;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      .machineCodingList__container__list__item__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 12px;
+      }
       .machineCodingList__container__list__item__question {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 400;
-        color: #333;
-        font-family: "Inter", sans-serif;
-        margin-bottom: 12px;
-        padding: 0px 16px;
-        padding-top: 16px;
+        color: #fff;
+        margin: 12px 0px 0px 0px;
+        line-height: 1.2;
       }
       .machineCodingList__container__list__item__tech {
-        padding: 0px 16px;
-        padding-bottom: 16px;
+        margin-top: 32px;
         .machineCodingList__container__list__item__tech__item {
           display: inline-block;
           padding: 6px 12px;
@@ -82,7 +104,6 @@
           color: #666;
           font-family: "Inter", sans-serif;
           margin-right: 8px;
-          margin-bottom: 8px;
           &:hover {
             background-color: #d6d6d6;
           }
@@ -90,28 +111,44 @@
       }
     }
   }
+  .machineCodingList__container__list__view_all {
+    margin-top: 32px;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #66b2ff;
+    cursor: pointer;
+    text-align: center;
+    &:hover {
+      color: #5090d3;
+      text-decoration: underline;
+    }
+  }
 }
 @media screen and (max-width: 800px) {
   .machineCodingList__container {
-    padding: 0px 16px;
-    .machineCodingList__container__header {
-      .machineCodingList__container__header__title {
-        text-align: center;
-        font-size: 28px;
-      }
-      .machineCodingList__container__header__description {
-        padding: 0px 0px;
-      }
-      .machineCodingList__container__header__btn {
-        width: 100%;
-        touch-action: pan-y;
-        -webkit-tap-highlight-color: transparent;
+    padding: 72px 16px;
+    max-width: 100%;
+    .machineCodingList__container__text {
+      .machineCodingList__container__text__list {
+        flex-direction: column;
       }
     }
     .machineCodingList__container__list {
       .machineCodingList__container__list__item {
-        width: 100%;
+        cursor: pointer;
+        touch-action: pan-y;
+        -webkit-tap-highlight-color: transparent;
       }
+    }
+    .machineCodingList__container__list__view_all {
+      touch-action: pan-y;
+      -webkit-tap-highlight-color: transparent;
     }
   }
 }
