--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -1,28 +1,27 @@
 .topSection {
-  height: calc(100vh - 100px);
-  width: 100%;
+  margin: 0px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 44px;
+  background-color: #011e3c;
+  padding-top: 109px;
+  padding-bottom: 142px;
+  gap: 24px;
   .topSection_title {
     font-size: 60px;
     font-weight: 800;
-    color: #000;
+    color: #fff;
     text-align: center;
     font-family: "Roboto", sans-serif;
-    background: linear-gradient(90deg, #f9d423 0%, #ff4e50 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    .topSection_title_highlight {
+      color: #66b2ff;
+    }
   }
   .topSection_description {
     font-size: 20px;
-    font-weight: 400;
-    line-height: 1.3;
     text-align: center;
-    font-family: "Inter", sans-serif;
-    color: #666;
+    color: #fff;
   }
   .topSection_btn_list {
     display: flex;
@@ -36,27 +35,25 @@
       width: 300px;
       height: 50px;
       border-radius: 3px;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 500;
-      font-family: "Inter", sans-serif;
       cursor: pointer;
-      transition: all 0.4s ease-in-out;
+      font-family: "Roboto", sans-serif;
+      color: #fff;
+      transition: all 0.5s ease-in-out;
     }
     .topSection_button_left {
-      background-color: #000;
-      color: #fff;
-      border: 1px solid #eaeaea;
+      background-color: #054da7;
+      border: 1px solid #054da7;
       &:hover {
-        background-color: rgb(245, 245, 245);
-        color: #000;
+        background-color: #034290;
       }
     }
     .topSection_button_right {
-      background-color: #fff;
-      color: #000;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      border: 1px solid #054da7;
+      color: #66b2ff;
       &:hover {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        background-color: #023367;
       }
     }
   }
@@ -65,18 +62,22 @@
 @media screen and (max-width: 800px) {
   .topSection {
     padding: 0px 16px;
+    padding-top: 109px;
+    padding-bottom: 142px;
     .topSection_title {
-      font-size: 32px;
-      text-align: center;
+      font-size: 36px;
+      font-weight: 700;
     }
     .topSection_description {
       font-size: 16px;
-      font-family: "Inter", sans-serif;
-      padding: 0px;
     }
     .topSection_btn_list {
       flex-direction: column;
-      .topSection_btn {
+      .topSection_button_left {
+        touch-action: pan-y;
+        -webkit-tap-highlight-color: transparent;
+      }
+      .topSection_button_right {
         touch-action: pan-y;
         -webkit-tap-highlight-color: transparent;
       }
