--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -3,14 +3,14 @@
     width: 300px;
     padding: 16px;
     padding-top: 0px;
-    background: #ffffff;
+    background: #0b1929;
     .sideBar_searchBar {
       width: 100%;
       height: 42px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      border: 1px solid #132f4c;
+      border-radius: 8px;
       padding: 0 8px;
-      background: white;
+      background: #0b1929;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -22,10 +22,11 @@
         outline: none;
         font-size: 16px;
         color: #333;
-        background: #ffffff;
+        background: #0b1929;
         &::placeholder {
-          color: #ccc;
+          color: #b2bac2;
         }
+        color: #fff;
       }
       .search_icon {
         margin-right: 4px;
@@ -34,18 +35,21 @@
     .sideBar_scrollable_container {
       height: calc(100vh - 160px);
       overflow-y: scroll;
+      border: 1px solid #132f4c;
+      border-radius: 12px;
+      padding: 16px;
       .sideBar_title {
         font-size: 21px;
         font-weight: 600;
         font-family: "Roboto";
         margin-bottom: 8px;
-        color: #000;
+        color: #dfdcdc;
       }
       &::-webkit-scrollbar {
-        width: 5px;
+        width: 4px;
       }
       &::-webkit-scrollbar-thumb {
-        background-color: rgb(211, 209, 209);
+        background-color: rgb(133, 132, 132);
         border-radius: 4px;
       }
     }
