--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -1,7 +1,7 @@
 .database {
   width: 100%;
-  background: #ffffff;
-  height: calc(100vh - 80px);
+  background: #0B1929;
+  height: calc(100vh - 70px);
   overflow-y: scroll;
   overflow-x: hidden;
   &::-webkit-scrollbar {
