--- a/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
+++ b/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
@@ -52,7 +52,7 @@
       .advancedFeature_body__item__description {
         font-size: 14px;
         font-weight: 400;
-        color: #a0aab4;
+        color: #c6d2dc;
         line-height: 1.2;
       }
       .advancedFeature_body__item__tags {
