--- a/components/dashboard/famousQuestions/FamousQuestions.module.scss
+++ b/components/dashboard/famousQuestions/FamousQuestions.module.scss
@@ -31,6 +31,91 @@
         margin-top: 10px;
       }
     }
+    .codingQuestions__container__play_ground {
+      margin: 72px 0px;
+      padding: 16px;
+      padding-left: 0px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 62px;
+      .codingQuestions__container__play_ground__left {
+        flex: 1;
+        .codingQuestions__container__play_ground__left__title {
+          font-size: 18px;
+          font-weight: 600;
+          color: #fff;
+          font-family: "Roboto", sans-serif;
+          margin-bottom: 24px;
+          width: max-content;
+          position: relative;
+          &:after {
+            content: "";
+            position: absolute;
+            bottom: -24px;
+            left: 0;
+            height: 20px;
+            width: 100%;
+            border: solid 3px #5090d3;
+            border-color: #5090d3 transparent transparent transparent;
+            border-radius: 50%;
+          }
+        }
+        .codingQuestions__container__play_ground__left__sub_title {
+          font-size: 17px;
+          font-weight: 400;
+          color: #a0aab4;
+          line-height: 1.2;
+          margin-top: 10px;
+        }
+        .codingQuestions__container__play_ground__left__button {
+          margin-top: 42px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 12px 24px;
+          width: 200px;
+          border-radius: 10px;
+          background: #5090d3;
+          border: 1px solid #5090d3;
+          font-size: 14px;
+          font-weight: 600;
+          color: #fff;
+          font-family: "Roboto", sans-serif;
+          cursor: pointer;
+          &:hover {
+            background: #66b2ff;
+          }
+        }
+        .codingQuestions__container__play_ground__description {
+          margin-top: 42px;
+          font-size: 15px;
+          font-weight: 500;
+          font-family: "Roboto", sans-serif;
+          color: #05b6d3;
+          font-style: italic;
+          line-height: 1.2;
+          .codingQuestions__container__play_ground__description__link {
+            color: #66b2ff;
+            cursor: pointer;
+            margin-left: 2px;
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+      .codingQuestions__container__play_ground__right {
+        flex: 1.5;
+        .codingQuestions__container__play_ground__right__image {
+          width: 100%;
+          height: 100%;
+          border: 8px solid #5090d3;
+          border-radius: 10px;
+          //make it responsive
+        }
+      }
+    }
     .codingQuestions__container__questions {
       margin-top: 56px;
       .codingQuestions__container__questions__item {
@@ -86,6 +171,9 @@
     padding: 56px 16px;
     .codingQuestions__container {
       width: 100%;
+      .codingQuestions__container__play_ground {
+        flex-direction: column;
+      }
       .codingQuestions__container__questions {
         margin-top: 56px;
         .codingQuestions__container__questions__item {
