--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -32,6 +32,7 @@
         display: flex;
         align-items: center;
         margin-top: 8px;
+        list-style: none;
         .header_menu_feature {
           .header_menu_button {
             padding: 8px 12px;
