--- a/common/customEditor/MonacoEditor.module.scss
+++ b/common/customEditor/MonacoEditor.module.scss
@@ -14,7 +14,7 @@
       align-items: center;
       height: 54px;
       padding: 0 16px;
-      padding-left: 0px;
+      background-color: #f5f5f5;
       border-right: 2px solid #ccc;
       .editorHeaderLeft {
         display: flex;
@@ -36,10 +36,24 @@
         &:hover {
           background-color: #27ae60;
         }
+        .editorHeaderRightBtnLoader {
+          border: 3px solid #f3f3f3;
+          border-top: 3px solid #3498db;
+          border-radius: 50%;
+          width: 22px;
+          height: 22px;
+          animation: spin 2s linear infinite;
+          margin: 0 auto;
+          @keyframes spin {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+            }
+          }
+        }
       }
-    }
-    .editor_monaco {
-      border: 2px solid #ccc;
     }
   }
   .editorOutput {
@@ -110,6 +124,7 @@
         width: 100%;
         height: 112px;
         outline: none;
+        resize: none;
       }
     }
   }
