--- a/common/customEditor/editorSetting/EditorSetting.module.scss
+++ b/common/customEditor/editorSetting/EditorSetting.module.scss
@@ -14,12 +14,12 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     width: 600px;
-    height: 395px;
+    height: 432px;
     .editorSetting_container_header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 16px;
+      padding: 12px 16px;
       border-bottom: 1px solid #ccc;
       .editorSetting_container_header_title {
         font-size: 20px;
