changing footer layout and style

--- a/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
+++ b/components/dashboard/advanceFrontendFeature/AdvanceFrontendFeature.module.scss
@@ -74,6 +74,22 @@
       }
     }
   }
+  .advancedFeature_footer {
+    margin-top: 42px;
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    color: #66b2ff;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 @media screen and (max-width: 800px) {
