--- a/components/sideBar/SideBar.module.scss
+++ b/components/sideBar/SideBar.module.scss
@@ -37,7 +37,8 @@
       overflow-y: scroll;
       border: 1px solid #132f4c;
       border-radius: 12px;
-      padding: 16px;
+      padding: 4px;
+      padding-right: 0px;
       .sideBar_title {
         font-size: 21px;
         font-weight: 600;
