--- a/components/blogDashboard/noPostFound/NoPostFound.module.scss
+++ b/components/blogDashboard/noPostFound/NoPostFound.module.scss
@@ -8,8 +8,8 @@
     margin-top: 32px;
     justify-content: center;
     font-family: "Roboto", sans-serif;
-    font-size: 36px;
-    color: rgb(100, 99, 99);
+    font-size: 22px;
+    color: #ffffff;
     font-weight: 500;
     text-align: center;
     font-style: italic;
