--- a/components/machineCodingQuestion/MachineCodingQuestionsList.module.scss
+++ b/components/machineCodingQuestion/MachineCodingQuestionsList.module.scss
@@ -4,6 +4,7 @@
     width: var(--max-width);
     margin: 62px auto;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 42px;
     .machine_round_list_loader {
@@ -14,38 +15,53 @@
       height: 50vh;
     }
     .machine_round_list_item {
-      width: 490px;
+      width: auto;
+      max-width: 450px;
       height: auto;
       background-color: #132f4c;
-      border-radius: 16px;
-      border: 1px solid #5090d3;
+      border-radius: 10px;
+      border: 1px solid #1e4976;
       transition: all 0.2s ease-in-out;
       &:hover {
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        transform: scale(1.004);
+        border: 1px solid #0072e4;
       }
-      padding: 32px;
       cursor: pointer;
       display: flex;
       flex-direction: column;
-      gap: 16px;
       justify-content: space-between;
+      .machine_round_list_item_image {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border: 1px solid #1e4976;
+      }
       .machine_round_list_item_question {
         font-size: 18px;
-        font-weight: 500;
-        color: #fff;
-        font-family: "Inter", sans-serif;
+        font-weight: 700;
+        color: #66b2ff;
+        font-family: "Roboto", sans-serif;
+        padding: 0px 20px;
+        margin-top: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
-      .machine_round_list_item_image {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid #f5f5f5;
-        border-radius: 16px;
+      .machine_round_list_item_description {
+        font-size: 14px;
+        font-weight: 400;
+        color: #b1bac2;
+        font-family: "Inter", sans-serif;
+        margin-top: 6px;
+        padding: 0px 20px;
+        //make ellipsis for max 2 lines
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .machine_round_list_item_language_container {
+        padding: 8px 20px;
+        margin-top: 8px;
         display: flex;
         align-items: center;
         gap: 8px;
@@ -56,15 +72,16 @@
 
 @media screen and (max-width: 768px) {
   .machine_round {
+    width: 100%;
+    padding: 0px 16px;
     .machine_round_list {
       width: 100%;
-      padding: 0px 16px;
       .machine_round_list_item {
-        width: 100%;
-        padding: 24px;
-        cursor: pointer;
-        touch-action: pan-y;
-        -webkit-tap-highlight-color: transparent;
+        max-width: 100%;
+        .machine_round_list_item_image {
+          max-width: 100%;
+          max-height: 250px;
+        }
       }
     }
   }
